<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_one" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_one_text" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/radio_one_one"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionOneButton"
                    android:text="@string/option_a_question_one" />

                <RadioButton
                    android:id="@+id/radio_one_two"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionOneButton"
                    android:text="@string/option_b_question_one" />

                <RadioButton
                    android:id="@+id/radio_one_three"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionOneButton"
                    android:text="@string/option_c_question_one" />

                <RadioButton
                    android:id="@+id/radio_one_four"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionOneButton"
                    android:text="@string/option_d_question_one" />
            </RadioGroup>

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_two" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_two_text" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_two_one"
                    style="@style/RadioButtonHorizontal"
                    android:onClick="questionTwoButton"
                    android:text="@string/option_a_question_two" />

                <RadioButton
                    android:id="@+id/radio_two_two"
                    style="@style/RadioButtonHorizontal"
                    android:onClick="questionTwoButton"
                    android:text="@string/option_b_question_two" />
            </RadioGroup>

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_three" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_three_text" />

            <EditText
                android:id="@+id/answer_field_three"
                style="@style/EditText"
                android:hint="@string/question_three_hint"
                android:inputType="number" />

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_four" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_four_text" />

            <ImageView
                style="@style/ImageView"
                android:layout_height="200dp"
                android:src="@drawable/handsign" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_four_one"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionFourButton"
                    android:text="@string/option_a_question_four" />

                <RadioButton
                    android:id="@+id/radio_four_two"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionFourButton"
                    android:text="@string/option_b_question_four" />

                <RadioButton
                    android:id="@+id/radio_four_three"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionFourButton"
                    android:text="@string/option_c_question_four" />

                <RadioButton
                    android:id="@+id/radio_four_four"
                    style="@style/RadioButtonVertical"
                    android:onClick="questionFourButton"
                    android:text="@string/option_d_question_four" />
            </RadioGroup>

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_five" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_five_text" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <TableRow>

                    <CheckBox
                        android:id="@+id/check_five_one"
                        style="@style/CheckBox"
                        android:text="@string/option_a_question_five" />

                    <CheckBox
                        android:id="@+id/check_five_two"
                        style="@style/CheckBox"
                        android:text="@string/option_b_question_five" />
                </TableRow>

                <TableRow>

                    <CheckBox
                        android:id="@+id/check_five_three"
                        style="@style/CheckBox"
                        android:text="@string/option_c_question_five" />

                    <CheckBox
                        android:id="@+id/check_five_four"
                        style="@style/CheckBox"
                        android:text="@string/option_d_question_five" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <Button
            style="@style/Button"
            android:layout_below="@id/linear_layout"
            android:layout_centerHorizontal="true"
            android:layout_margin="24dp"
            android:onClick="submitAnswersButton"
            android:text="@string/submit" />

    </RelativeLayout>
</ScrollView>